deployment-biblio.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: biblio
  labels:
    app: biblio
    tier: frontend
spec:
    replicas: 2
    selector:
        matchLabels:
            app: biblio
            tier: frontend
    template:
        metadata:
            labels:
                app: biblio
                tier: frontend
        spec:
            containers:
                - name: biblio
                  image: mzaygar034/biblioteca:v1_1
                  ports:
                    - containerPort: 80
                      name: biblio
