service-biblio.yaml
apiVersion: v1
kind: Service
metadata:
  name: biblio
  labels:
    app: biblio
    tier: frontend
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: biblio
  selector:
    app: biblio
    tier: frontend
